# XdfScheduleCrawler

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
tests/: userscript.test.mjs
userscripts/: xdf-schedule-export.user.js
