[project]
name = "xdf-schedule-crawler"
version = "1.0.0"
description = "抓取 XDF 课表并生成 Excel 明细与五时段月视图"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "nowscott" },
]
keywords = ["schedule", "playwright", "excel", "xdf"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: Chinese (Simplified)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "playwright>=1.40,<2",
  "openpyxl>=3.1,<4",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[project.urls]
Homepage = "https://github.com/nowscott/XdfScheduleCrawler"
Repository = "https://github.com/nowscott/XdfScheduleCrawler"
Issues = "https://github.com/nowscott/XdfScheduleCrawler/issues"
